--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ tokio = { version = "1.28", features = ["full"] }
 libc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winbase", "winnt", "accctrl", "aclapi", "securitybaseapi", "minwinbase", "winbase"] }
-miow = "0.5"
+winapi = { version = "0.3", features = ["winbase","winerror", "winnt", "accctrl", "aclapi", "securitybaseapi", "minwinbase", "winbase"] }
+miow = "0.6.0"
